# nowoczesny_c--zadania

scripts/: run-tests.sh
src/: CMakeLists.txt
src/016-enumerating_ipv4_address_in_a_range/: CMakeLists.txt
src/016-enumerating_ipv4_address_in_a_range/include/enumerating_ipv4_address_in_a_range/: IPv4Address.hpp
src/016-enumerating_ipv4_address_in_a_range/src/: IPv4Address.cpp
src/16-enumerating_ipv4_address_in_a_range/: CMakeLists.txt  solution.cpp  solution.hpp  tests.cpp
tests/: CMakeLists.txt
tests/016-enumerating_ipv4_address_in_a_range/: CMakeLists.txt  enumerating_ipv4_address_in_a_range.cpp
